# essential-solana-supply-chain

./: .gitignore  CLAUDE_DEV_NOTES.md  GEMINI.md  README.md  information.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  server.js
anchor/: Anchor.toml  codama.js
anchor/programs/supply_chain/: Cargo.toml
anchor/programs/supply_chain/src/: error.rs  lib.rs
anchor/programs/supply_chain/src/instructions/: complete_stage.rs  initialize_product.rs  log_event.rs  mod.rs  transfer_ownership.rs
anchor/programs/supply_chain/src/state/: event.rs  mod.rs  product.rs
anchor/src/: index.ts  supply_chain-exports.ts
anchor/tests/: supply_chain.test.ts  supply_chain_events.test.ts  supply_chain_product.test.ts
src/app/: layout.tsx
src/app/supply_chain/: page.tsx
src/components/: app-header.tsx  app-providers.tsx  enhanced-app-header.tsx
src/components/cluster/: cluster-ui.tsx
src/components/solana/: client-wallet-provider.tsx  enhanced-solana-provider.tsx  mobile-wallet-connection.tsx  mobile-wallet-provider.tsx  mobile-wallet-transaction.tsx  mobile-wallet-ui.tsx  solana-provider.tsx  use-is-mobile.tsx  use-wallet-transaction-sign-and-send.tsx  wallet-adapter-bridge.tsx
src/components/supply_chain/: enhanced-supply_chain-feature.tsx  enhanced_create_product_form.tsx  stage_display.tsx  supply_chain-data-access.tsx  supply_chain-feature.tsx  supply_chain-ui.tsx
src/components/ui/: input.tsx
